Fixed weather spacing. Started bountiful

--- a/chamber/styles/home-page.css
+++ b/chamber/styles/home-page.css
@@ -34,6 +34,11 @@ main p, .section p, ul li, p {
     align-content: center;
 }
 
+#flex-weather p {
+    font-size: 1.5em;
+    padding-left: 10px; 
+}
+
 
 
 
